Исправил отображение вводимого текста

--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -2,7 +2,8 @@
   padding: 10px;
 
   &__input {
-    padding: 14px 32px 14px 16px;
+    padding: 14px 6px 14px 10px;
+    width: 174px;
     border-radius: 4px 0 0 4px;
     border: 2px solid rgba(67, 18, 172, 1);
     outline: none;
